--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
   background-color: purple;
 }
 
+button {
+  background-color: #1f1137;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 15px;
+}
+
 .page-header img {
   display: block;
   margin: 0 auto;
