--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@ button, [type='submit']{
   padding: 10px 15px;
 }
 
+footer {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+footer a {
+  color: grey;
+}
+
 button,
 [type='submit'],
 .page-header img {
