--- a/style.css
+++ b/style.css
@@ -34,14 +34,16 @@ button,
 .page-header img {
   display: block;
   margin: 0 auto;
+  width: 21rem;
 }
 
 .card {
-  width: 10%;
+  width: 8.1rem;
   margin: 1em;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-end;
+  align-items: center;
   background-color: white;
   border: 5px black solid;
   box-shadow: 4px 4px 19px black;
@@ -58,6 +60,11 @@ button,
   text-align: center;
 }
 
+.favorite {
+  font-size: 1.5rem;
+  margin: 0 auto;
+}
+
 #search-container {
   display: flex;
   justify-content: center;
@@ -67,7 +74,6 @@ button,
   display: flex;
   flex-flow: row wrap;
   align-content: flex-end;
-  margin: 1rem 5rem;
 }
 
 #bttn-container {
