--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ button,
 
 .card {
   width: 8.1rem;
+  height: 22rem;
   margin: 1em;
   display: flex;
   flex-direction: column;
@@ -63,6 +64,7 @@ button,
 .favorite {
   font-size: 1.5rem;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 #search-container {
