--- a/style.css
+++ b/style.css
@@ -3,56 +3,55 @@ body {
   font-family: 'Quantico', sans-serif;
 }
 
+/**** Header *****/
+.page-header img {
+  display: block;
+  margin: 0 auto;
+  width: 21rem;
+  cursor: pointer;
+}
+
+/**** Search Container *****/
 label {
   font-weight: bold;
   font-size: 20px;
 }
 
-button, [type='submit']{
-  background-color: #1f1137;
-  color: #fff;
-  font-weight: bold;
-  border-radius: 50%;
-  padding: 10px 15px;
+.search-container {
+  display: flex;
+  justify-content: center;
 }
 
-footer {
-  margin-top: 1rem;
+/******* Item Container *********/
+.item-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  margin: 0 20rem;
+}
+
+.end {
+  font-size: 4rem;
+  margin: 0 auto;
   text-align: center;
 }
 
-footer a {
-  color: grey;
-}
-
-button,
-[type='submit'],
-.page-header img {
-  cursor: pointer;
-}
-
-.page-header img {
-  display: block;
-  margin: 0 auto;
-  width: 21rem;
-}
-
+/******** Card ***********/
 .card {
-  width: 8.1rem;
-  height: 22rem;
-  margin: 1em;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  width: 8.1rem;
+  height: 22rem;
+  margin: 1rem;
   background-color: white;
   border: 5px black solid;
   box-shadow: 4px 4px 19px black;
 }
 
 .card img {
-  max-width: 50%;
-  max-height: auto;
+  width: 50%;
   margin: 10px auto 0;
 }
 
@@ -67,26 +66,27 @@ button,
   cursor: pointer;
 }
 
-#search-container {
-  display: flex;
-  justify-content: center;
+
+/******* Buttons *********/
+button, [type='submit']{
+  background-color: #1f1137;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 50%;
+  padding: 10px 15px;
+  cursor: pointer;
 }
 
-#item-container {
-  display: flex;
-  flex-flow: row wrap;
-  align-content: flex-end;
-  margin: 0 5.4rem;
-}
-/*Margins are temporary^^^*/
-
-#bttn-container {
-  margin: 0 auto;
+.bttn-container {
   text-align: center;
 }
 
-#end {
-  font-size: 4rem;
-  margin: 0 auto;
+/********** Footer *************/
+footer {
+  margin-top: 1rem;
   text-align: center;
+}
+
+footer a {
+  color: grey;
 }
