--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ label {
 .item-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
   margin: 0 20rem;
 }
 
